Add tool functionality in App.vue: implement search input, selection options for processing strategies, and update table data structure for enhanced user interaction.

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,8 @@
     <body>
         <main class="container">
             <h1>Welcome to TauriMan</h1>
-
             <div class="row">
-                <a href="https://tauri.app" target="_blank">
+                <a href="https://tauri.app" target="_blank" rel="noopener">
                     <img
                         src="/assets/tauri.svg"
                         class="logo tauri"
@@ -23,6 +22,7 @@
                 <a
                     href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
                     target="_blank"
+                    rel="noopener"
                 >
                     <img
                         src="/assets/javascript.svg"
