Update index.html, remove unused JavaScript logo, and add greet command
- Updated index.html to replace the JavaScript logo with the Tauri logo and changed the accompanying text.
- Removed the unused javascript.svg file.
- Added a new greet command in comds.rs to enhance user interaction.
- Updated default.json to include the new opener permission.
- Modified init.rs to change the URL for the app window configuration.

--- a/src/index.html
+++ b/src/index.html
@@ -12,26 +12,19 @@
         <main class="container">
             <h1>Welcome to TauriMan</h1>
             <div class="row">
-                <a href="https://tauri.app" target="_blank" rel="noopener">
+                <a
+                    href="https://www.pakeplus.com"
+                    target="_blank"
+                    rel="noopener"
+                >
                     <img
                         src="/assets/tauri.svg"
                         class="logo tauri"
                         alt="Tauri logo"
                     />
                 </a>
-                <a
-                    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-                    target="_blank"
-                    rel="noopener"
-                >
-                    <img
-                        src="/assets/javascript.svg"
-                        class="logo vanilla"
-                        alt="JavaScript logo"
-                    />
-                </a>
             </div>
-            <p>Click on the Tauri logo to learn more about the framework</p>
+            <p>Click on the TauriMan logo to learn more about the framework</p>
             <form class="row" id="greet-form">
                 <input id="greet-input" placeholder="Enter a name..." />
                 <button type="submit">Greet</button>
